--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "devDependencies": {
     "concurrently": "^7.0.0",
     "husky": "^7.0.0"
+  },
+  "dependencies": {
+    "argon2": "^0.29.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
